Fix Creation component SwaggerManager
